--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="https://dizzzy1.github.io/practica2/" target="_blank">Tarea 3 (102 Etiquetas)</a>
               </li>
               <li>
-                <a href="https://dizzzy1.github.io//" target="_blank">Tarea 4 (Banco)</a>
+                <a href="https://dizzzy1.github.io/practica3/" target="_blank">Tarea 4 (Banco)</a>
               </li>
             </ul>
           </nav>
